Stack now is displayed growing upwards